<resources>
    <string name="app_name">KapSnap</string>
    <string name="texture_tag">TEXTURE</string>
    <string name="stop_video">Stop Video</string>
    <string name="start_video">Start Video</string>
    <string name="take_picture">Take Picture</string>
    <string name="full_name_default">Full Name</string>
    <string name="username_default">username</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="incoming_messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="choose_recipients">Choose Recipients</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_username">Friend Username</string>
    <string name="username_hint">Username</string>
    <string name="view_requests">View Requests</string>
    <string name="requests">Requests</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="friend_list_activity_tag">FriendListActivity</string>
    <string name="failed_to_get_friends">Failed to get friend list update</string>
    <string name="users_db_tag">users</string>
    <string name="friends_db_tag">friends</string>
    <string name="enter_username">Please enter a username.</string>
    <string name="generic_error">There was an error. Please try again.</string>
    <string name="usernames_db_tag">usernames</string>
    <string name="no_user_error">User does not exist.</string>
    <string name="signup_activity_tag">SignUpActivity</string>
    <string name="did_not_check_for_user">Failed to check for user</string>
    <string name="already_friends">You are already friends.</string>
    <string name="already_requested">You have already requested this person.</string>
    <string name="friend_added_message">Friend Rquested.</string>
    <string name="request_list_activity_tag">RequestListActivity</string>
    <string name="failed_to_get_request_update">Failed to get friend requests update</string>
    <string name="incorrect_user_or_pass">Username or Password is Incorrect.</string>
    <string name="sign_up_no_underline">Sign Up</string>
    <string name="media_type_extra_tag">mediaType</string>
    <string name="media_location">media</string>
    <string name="media">media</string>
    <string name="tap_to_load">Tap to load</string>
    <string name="message_list_tag">MessageListFragment</string>
    <string name="failed_to_get_messages">Failed to get messages</string>
    <string name="sign_out">Sign Out</string>
</resources>
