<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/themeLight">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themePrimary"
        android:layout_gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27dp"
                android:textColor="#FFFFFF"
                android:text="@string/sign_up_no_underline"
                android:layout_weight="1"/>


        </LinearLayout>



    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:id="@+id/email"
                android:hint="@string/email_hint"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:id="@+id/username"
                android:hint="@string/username_hint"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:id="@+id/firstName"
                android:hint="@string/first_name"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:id="@+id/lastName"
                android:hint="@string/last_name"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:id="@+id/password"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:id="@+id/confirm_password"
                />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/themePrimary"
            android:layout_marginTop="30dp"
            android:id="@+id/sign_up_with_info"
            android:text="@string/sign_up"/>

    </LinearLayout>

</LinearLayout>
