<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:background="@color/themeLight">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/login_logo"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:id="@+id/email"
                android:hint="Email"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:id="@+id/password"
                />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/themePrimary"
            android:id="@+id/login"
            android:text="@string/login"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/themeInverted"
                android:text="@string/no_account"/>


            <TextView
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:clickable="true"
                android:autoLink="all"
                android:textColor="@color/themeInverted"
                android:text="@string/sign_up"/>


        </LinearLayout>


</LinearLayout>
