<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <ImageView
        android:id="@+id/icon_view"
        android:layout_marginStart="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/photo_outgoing_opened"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/message_full_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@color/themeInverted"
                android:text="@string/full_name_default"/>

            <TextView
                android:id="@+id/message_username"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@color/themeInvertedMedium"
                android:text="@string/username_default"/>


            <TextView
                android:id="@+id/message_instruction"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@color/themeInvertedLight"
                android:text="@string/tap_to_load"/>

            </LinearLayout>


        <TextView
            android:id="@+id/message_time_date"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/themeInvertedLight"
            android:text="Sent 10/2/3/4 4:52:1"/>



    </LinearLayout>




</LinearLayout>